<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DangNhapActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarDangNhap"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:title="@string/title_activity_dang_nhap">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/user"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ĐĂNG NHẬP TÀI KHOẢN"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tai_khoan"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/editTaiKhoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập tài khoản"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mat_khau"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nhập mật khẩu"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_dang_nhap"
        android:background="@color/colorAccent"
        android:textColor="@color/colorButtonText"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:text="Nếu bạn chưa có tài khoản ?"/>

        <TextView
            android:id="@+id/tvDangKi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="italic"
            android:text="@string/title_activity_dang_ki"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

</LinearLayout>